...
              selectedFilters.isEmpty() || activity.activityType in selectedFilters
            }
            .sumOf { it.estimatedPrice }
  }

  Scaffold(
      modifier = Modifier.testTag("activitiesScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            selectedItem = navigationActions.currentRoute(),
            userViewModel = userViewModel,
            tripsViewModel = tripsViewModel)
      },
      topBar = {
        TopAppBar(
            title = {
              Box(
                  modifier = Modifier.fillMaxWidth().fillMaxHeight(),
                  contentAlignment = Alignment.CenterStart) {
                    SearchBar(
...
