...
    userViewModel: UserViewModel,
    placesViewModel: PlacesViewModel,
    onUpdate: () -> Unit = {}
) {

  Scaffold(
      modifier = Modifier.testTag("settingsScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            selectedItem = navigationActions.currentRoute(),
            userViewModel,
...
